(menhir
 (modules parser)
 (flags --table --inspection))

(library
 (name analyzer)
 (public_name language_server.analyzer)
 (preprocess (pps ppx_deriving.show))
 (libraries language_server menhirLib))

(rule
 (target lexer.ml)
 (deps   lexer.mll)
 (action (chdir %{workspace_root}
          (run %{bin:ocamllex} -ml -q -o %{target} %{deps}))))
